--- a/application/admin/view/common/sms_modal.html
+++ b/application/admin/view/common/sms_modal.html
@@ -159,3 +159,17 @@
     </div>
 </div>
 <!--短链模版弹出end-->
+
+<!--短信模板操作begin-->
+<script type="text/html" id="modal_sms_actionbar">
+    <a class="layui-btn layui-btn-xs layui-btn-normal" lay-event="use_sms_module">使用</a>
+    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del_sms_module">删除</a>
+</script>
+<!--短信模板操作end-->
+
+
+<!--短链操作begin-->
+<script type="text/html" id="short_sms_actionbar">
+    <a class="layui-btn layui-btn-xs layui-btn-normal" lay-event="use_sms_short_link">选择链接</a>
+</script>
+<!--短链操作end-->
