--- a/application/admin/view/order/task_add.html
+++ b/application/admin/view/order/task_add.html
@@ -332,6 +332,7 @@
                     <span class="step step-left step-tow-number">2</span><span class="step-two-msg">第二步：发送过滤</span>
                     <span class="step-line"></span>
                     <span class="step step-left step-three-number">3</span><span class="step-three-msg">第二步：短信编辑</span>
+                    <span class="float-right close-icon-right cancle" title="关闭"><i class="fa fa-times" aria-hidden="true"></i></span>
                 </div>
                 <!-------------------------------------步骤header end----------------------------------->
 
