--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -1864,13 +1864,13 @@ tr>td.tdright .layui-textarea{
     /*background: #ffffff;*/
 }
 
-.searchbody,.searchbody2,.searchBodyCommon {
+.searchbody,.searchbody1,.searchbody2,.searchBodyCommon {
     padding: 10px 15px 1px 15px !important;
     height: auto;
     /*overflow:auto;*/
 }
 
-.searchbody .layui-btn,.searchbody2 .layui-btn,.searchBodyCommon .layui-btn{
+.searchbody .layui-btn,.searchbody1 .layui-btn,.searchbody2 .layui-btn,.searchBodyCommon .layui-btn{
     padding: 0px 30px;
 }
 
